<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.quarkiverse</groupId>
    <artifactId>quarkiverse-parent</artifactId>
    <version>20</version>
  </parent>
  <groupId>io.quarkiverse.openapi.generator</groupId>
  <artifactId>quarkus-openapi-generator-parent</artifactId>
  <version>3.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Quarkus - OpenAPI Generator - Parent</name>
  <modules>
    <module>client</module>
    <module>server</module>
    <module>docs</module>
    <module>moqu</module>
  </modules>
  <scm>
    <connection>:git:git@github.com:quarkiverse/quarkus-openapi-generator.git</connection>
    <developerConnection>scm:git:git@github.com:quarkiverse/quarkus-openapi-generator.git</developerConnection>
    <url>https://github.com/quarkiverse/quarkus-openapi-generator</url>
    <tag>HEAD</tag>
  </scm>
  <properties>
    <compiler-plugin.version>3.8.1</compiler-plugin.version>
    <maven.compiler.release>17</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <quarkus.version>3.23.3</quarkus.version>
    <apicurio.version>1.2.1.Final</apicurio.version>
    <version.com.github.javaparser>3.26.4</version.com.github.javaparser>
    <version.org.assertj>3.27.3</version.org.assertj>
    <version.org.eclipse.microprofile.fault-tolerance>4.1.2</version.org.eclipse.microprofile.fault-tolerance>
    <version.org.wiremock>3.13.1</version.org.wiremock>
    <version.com.github.tomakehurst>2.35.2</version.com.github.tomakehurst>
    <version.io.swagger.parser>2.1.29</version.io.swagger.parser>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-bom</artifactId>
        <version>${quarkus.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.eclipse.microprofile.fault-tolerance</groupId>
        <artifactId>microprofile-fault-tolerance-api</artifactId>
        <version>${version.org.eclipse.microprofile.fault-tolerance}</version>
      </dependency>
      <dependency>
        <groupId>io.quarkiverse.openapi.generator</groupId>
        <artifactId>quarkus-openapi-generator</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.quarkiverse.openapi.generator</groupId>
        <artifactId>quarkus-openapi-generator-server</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.apicurio</groupId>
        <artifactId>apicurio-codegen</artifactId>
        <version>${apicurio.version}</version>
      </dependency>
      <dependency>
        <groupId>org.wiremock</groupId>
        <artifactId>wiremock</artifactId>
        <version>${version.org.wiremock}</version>
      </dependency>
      <!-- Test -->
      <dependency>
        <groupId>com.github.javaparser</groupId>
        <artifactId>javaparser-core</artifactId>
        <version>${version.com.github.javaparser}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${version.org.assertj}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>io.quarkiverse.openapi.generator</groupId>
        <artifactId>quarkus-openapi-generator-generation-input</artifactId>
        <scope>test</scope>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.quarkiverse.openapi.generator</groupId>
        <artifactId>quarkus-openapi-generator-test-utils</artifactId>
        <version>${project.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>io.quarkus</groupId>
          <artifactId>quarkus-maven-plugin</artifactId>
          <version>${quarkus.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${compiler-plugin.version}</version>
          <configuration>
            <compilerArgs>
              <arg>-parameters</arg>
            </compilerArgs>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <configuration>
            <additionalOptions>-Xdoclint:none</additionalOptions>
          </configuration>
        </plugin>
        <plugin>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-config-doc-maven-plugin</artifactId>
            <version>${quarkus.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <profiles>
    <profile>
      <id>docs</id>
      <activation>
        <property>
          <name>performRelease</name>
          <value>!true</value>
        </property>
      </activation>
      <modules>
        <module>docs</module>
      </modules>
    </profile>
    <profile>
      <id>it</id>
      <activation>
        <property>
          <name>performRelease</name>
          <value>!true</value>
        </property>
      </activation>
      <modules>
        <module>client/integration-tests</module>
        <module>server/integration-tests</module>
      </modules>
    </profile>
  </profiles>
</project>
